1134247707	Neue Versionsnummer: 0.1.3
1134247705	Neues Feature: Imperium.
1134227596	Neue Versionsnummer: 0.1.2
1134227595	Allianzhighscores eingebaut.
1134173858	Neue Versionsnummer: 0.1.1
1134173856	Gründliche Bugs im Flottensystem behoben, die definitiv auch zur Flottenverdopplung beigetragen haben.
1133910834	Wenn man Verbündete über die Karte ausspioniert, wird jetzt ebenfalls nur noch eine Spionagesonde geschickt.
1133724452	Neue Versionsnummer: 0.1.0
1133724450	Allianzsystem eingebaut.
1133382639	Kleinen großen Sicherheitsbug behoben, hoffen wir, dass Flottenverdopplung daran lag.
1133272683	Neue Versionsnummer: 0.0.8
1133271233	Man kann nun auch HTML-Code in die Benutzerbeschreibung schreiben.
1133267166	Noobschutz gilt nun auch für Spionage.
1133220611	Berühmt-berüchtigten Highscores-Bug endlich gefunden und behoben.
1133047506	Neue Versionsnummer: 0.0.7
1133047504	Neues Feature: Man kann Nachrichten jetzt veröffentlichen.
1133042054	Neue Versionsnummer: 0.0.6
1133042051	Neues Feature: Im Planet-umbenennen-Menü kann man die Reihenfolge seiner Planeten individuell festlegen.
1133008471	Verbaute Rohstoffe zählen jetzt nicht mehr in den Handelskurs hinein, es werden nur noch vorhandene Rohstoffe benutzt.
1133002644	Neue Versionsnummer: 0.0.5
1133002641	Besserer DB-Locking-Mechanismus, hoffen wir, dass dieser ein paar Bugs behebt.
1133001344	Aufgrund eines Tippfehlers wurde bis jetzt bei der Neuberechnung der Punktzahl vergessen, Flotten, die unterwegs waren, miteinzubeziehen.
1132776960	Neue Versionsnummer: 0.0.4
1132776958	Interne Änderungen, mehr Sicherheit in der Datenbank.
1132776942	Neuer Algorithmus für den Handelskurs, hoffen wir, dass dieser funktioniert.
1132776838	Changelog ins Spiel integriert.
1132694764	Neue Versionsnummer: 0.0.3
1132694762	SVN-Version von überflüssigen Grafiken befreit.
1132694752	Anzeigefehler (Internet Explorer) in der Karte behoben: Mini-Planeten-Bilder hatten weißen Hintergrund.