@@ -1,3 +1,4 @@
+1134249180	Rohstoffproduktion im Imperium nun auch für x Tage berechnebar.
 1134247707	Neue Versionsnummer: 0.1.3
 1134247705	Neues Feature: Imperium.
 1134227596	Neue Versionsnummer: 0.1.2
